--- a/authn/src/main/resources/application.properties
+++ b/authn/src/main/resources/application.properties
@@ -11,4 +11,4 @@ spring.jpa.hibernate.ddl-auto=update
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 spring.h2.console.settings.trace=false
-spring.h2.console.settings.web-allow-others=false
+spring.h2.console.settings.web-allow-others=true
